Building the Blackjack JS project 4

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@
 /Website-cRISES-2022
 /Website-Bootstrap-2022
 /Website-3DMotion-2022
+/Scrimba-Learn-Javascript-for-free/project-4/Green_felt.jpg
+/Scrimba-Learn-Javascript-for-free/project-4/blackjack-table.png
+/Scrimba-Learn-Javascript-for-free/project-4/hoyle-playing-cards-font/
+/Scrimba-Learn-Javascript-for-free/project-4/lounge-bait-font/
